@@ -65,6 +65,9 @@ pce_message(required_predicate_not_found(Name,Arity)) -->
 pce_message(illegal_term_in_index(Term,Index)) -->
 	['illegal term ~w in index file ~w'-[Term,Index],nl].
 
+pce_message(no_pw3_predicate(P/N)) -->
+	['XPCE/Prolog predicate ~w/~d not part of ProWindows'-[P,N],nl].
+
 pce_message(preformatted(Fmt, Args)) -->
 	[Fmt-Args, nl].
 
